--- a/index.css
+++ b/index.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@500&display=swap');
 
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 body {
     background-image: url(fon.jpg);
     background-repeat: no-repeat;
@@ -9,15 +15,18 @@ body {
 }
 
 .cont {
+    width: 100%;
+    height: auto; 
     display: flex;
-    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    margin-left: 100px;
 }
 
 .img {
-    width: 400px;
+    max-width: 100%;
     height: 500px;
-    margin-left: 200px;
-    margin-top: 70px;
+    margin-top: 50px;
     border-radius: 20px;
 }
 
