--- a/nologin.css
+++ b/nologin.css
@@ -100,16 +100,31 @@
         }
     }
 
-    header {
+    .header {
         display: flex;
         flex-direction: row-reverse;
         align-items: center;
-        flex-wrap: wrap;
+        text-align: center;
+        /* flex-wrap: wrap; */
         width: 100%;
         height: 100px;
-        background: #ffffffbe;
+        background: #ffffff;
         margin: 0 auto;
         border-radius: 20px;
+        position: fixed;
+        z-index: 1;
+        top: 0;
+
+        transform: scale(1);
+        opacity: 1;
+        transition: 0.7s;
+    }
+
+    .header.new {
+        transform: scale(1);
+        opacity: 1;
+        background: #000;
+        color: #fff;
     }
 
     .header-p {
@@ -133,7 +148,7 @@
         color: gold;
     }
 
-    .header-name{
+    .header-name {
         position: absolute;
         font-family: 'Permanent Marker', cursive;
         right: 900px;
@@ -165,6 +180,15 @@
         width: 300px;
         opacity: 30%;
         z-index: 0;
+        transform: scale(0);
+        transition: 1.5s;
+        margin-top: -400px;
+    }
+
+    .photo-card.new {
+        margin-top: 0px;
+        transform: scale(1);
+        opacity: 30%;
     }
 
     .block {
@@ -175,7 +199,7 @@
         height: 300px;
         background-image: radial-gradient(circle, rgb(252, 252, 252), rgb(79, 76, 76));
         margin: 0 auto;
-        margin-top: 100px;
+        margin-top: 250px;
         border-radius: 20px;
         padding: 20px;
         position: relative;
@@ -201,7 +225,6 @@
     .block_photo {
         width: 60px;
         position: relative;
-        z-index: 1;
         margin-left: 50px;
         bottom: 70px;
         border-radius: 5px;
@@ -243,6 +266,7 @@
 
     .name_name {
         font-family: 'Permanent Marker', cursive;
+        margin-left: 30px;
     }
 
     .name_surname {
@@ -255,30 +279,24 @@
         flex-direction: column;
         justify-content: center;
         margin: 0 auto;
-        width: 900px;
-        height: 400px;
-        margin-top: 50px;
+        max-width: 900px;
+        max-height: 400px;
+        /* width: 900px;
+        height: 400px; */
+        margin-top: 120px;
         background-image: radial-gradient(circle, rgb(252, 252, 252), rgb(79, 76, 76));
         border-radius: 20px;
         padding: 20px;
+        transform: scale(0);
+        opacity: 0;
+        transition: 1.5s;
     }
 
-    /*     .input_number-card {
-        width: 500px;
-        font-family: 'Permanent Marker', cursive;
+    .input0.new {
+        transform: scale(1);
+        opacity: 1;
     }
 
-    .input_name-card {
-        width: 500px;
-        margin-top: 10px;
-        font-family: 'Permanent Marker', cursive;
-    }
-
-    .input_year-card {
-        width: 500px;
-        margin-top: 10px;
-        font-family: 'Permanent Marker', cursive;
-    } */
     .label {
         font-family: 'Permanent Marker', cursive;
         color: gold;
