--- a/media.css
+++ b/media.css
@@ -1,5 +1,4 @@
-@media(max-width: 480px) {
-
+@media (max-width:1024px) {
     body {
         width: 100%;
         height: 100%;
@@ -22,10 +21,10 @@
         }
     }
 
-    
+
     .header {
         display: flex;
-        flex-direction: row;
+        flex-direction: row-reverse;
         align-items: center;
         text-align: center;
         /* flex-wrap: wrap; */
@@ -37,7 +36,6 @@
         position: fixed;
         z-index: 1;
         top: 0;
-
         transform: scale(1);
         opacity: 1;
         transition: 0.7s;
@@ -66,19 +64,17 @@
     }
 
     .header-logo {
-        background: #000;
         font-family: 'Permanent Marker', cursive;
         margin-right: -40px;
         color: gold;
     }
 
     .header-name {
-        position: absolute;
+        /* position: absolute; */
         font-family: 'Permanent Marker', cursive;
-        right: 900px;
     }
 
-    /* .header-text {
+    .header-text {
         font-family: 'Permanent Marker', cursive;
         position: absolute;
         width: 200px;
@@ -89,19 +85,21 @@
         left: -250px;
         top: 100px;
         transition: 0.5s;
+        display: none;
     }
 
     .header-text.active {
         opacity: 1;
         bottom: -50px;
         left: 80px;
-    } */
+        display: none;
+    }
 
     .block {
         display: flex;
         justify-content: center;
         flex-direction: column;
-        width: 100%;
+        width: 90%;
         height: 300px;
         background-image: radial-gradient(circle, rgb(252, 252, 252), rgb(79, 76, 76));
         margin: 0 auto;
@@ -112,42 +110,38 @@
         overflow: hidden;
     }
 
-    /* .photo-card {
-    position: absolute;
-    left: 250px;
-    top: 0;
-    width: 300px;
-    opacity: 30%;
-    z-index: 0;
-    transform: scale(0);
-    transition: 1.5s;
-    margin-top: -400px;
-}
+    .photo-card {
+        position: absolute;
+        left: 250px;
+        top: 0;
+        width: 300px;
+        opacity: 30%;
+        z-index: 0;
+        transform: scale(0);
+        transition: 1.5s;
+        margin-top: -400px;
+        display: none;
+    }
 
-.photo-card.new {
-    margin-top: 0px;
-    transform: scale(1);
-    opacity: 30%;
-} */ 
+    .photo-card.new {
+        margin-top: 0px;
+        transform: scale(1);
+        opacity: 30%;
+        display: none;
+    }
 
-.input0 {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin: 0 auto;
-    width: 900px;
-    height: 500px;
-    /* width: 900px;
-    height: 400px; */
-    margin-top: 120px;
-    background-image: radial-gradient(circle, rgb(252, 252, 252), rgb(79, 76, 76));
-    border-radius: 20px;
-    padding: 20px;
-}
-
-
-
-
+    .input0 {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin: 0 auto;
+        width: 90%;
+        height: 500px;
+        margin-top: 120px;
+        background-image: radial-gradient(circle, rgb(252, 252, 252), rgb(79, 76, 76));
+        border-radius: 20px;
+        padding: 20px;
+    }
 }
 
 
@@ -160,9 +154,7 @@
 
 
 
-@media (max-width: 768px){
-
-}
+@media (max-width:768px) {}
 
 
 
@@ -171,37 +163,184 @@
 
 
 
+@media(max-width: 480px) {
+
+    body {
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(45deg, #ffffffbe, #000000, #ffffffbe, #000000, #ffffffbe);
+        background-size: 200% 200%;
+        animation: gradientAnimation 5s cubic-bezier(0.445, 0.05, 0.55, 0.95) alternate infinite;
+    }
+
+    @keyframes gradientAnimation {
+        0% {
+            background-position: 0% 100%;
+        }
+
+        50% {
+            background-position: 100% 50%;
+        }
+
+        100% {
+            background-position: 0% 50%;
+        }
+    }
 
 
+    .header {
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: center;
+        /* flex-wrap: wrap; */
+        width: 100%;
+        height: 100px;
+        background: #ffffff;
+        margin: 0 auto;
+        border-radius: 20px;
+        position: fixed;
+        z-index: 1;
+        top: 0;
+        transform: scale(1);
+        opacity: 1;
+        transition: 0.7s;
+    }
 
-@media (max-width: 1024px){
+    .headerr {
+        display: flex;
+        flex-direction: row;
+        margin-left: -400px;
+    }
 
-}
+    .headerr2 {
+        display: flex;
+        justify-content: center;
+        flex-direction: column-reverse;
+        margin-left: 100px;
+        padding: 10px;
+    }
+
+    .header.new {
+        transform: scale(1);
+        opacity: 1;
+        background: #000;
+        color: #fff;
+    }
+
+    .header-p {
+        font-family: 'Permanent Marker', cursive;
+        color: gold;
+        cursor: pointer;
+    }
+
+    .header-img {
+        width: 60px;
+        height: 80px;
+        border-radius: 10px 40px 10px 40px;
+        margin-right: 400px;
+        cursor: pointer;
+        display: none;
+    }
+
+    .header-logo {
+        font-family: 'Permanent Marker', cursive;
+        color: gold;
+    }
+
+    .header-name {
+        font-family: 'Permanent Marker', cursive;
+        color: gold;
+    }
+
+    .header-text {
+        font-family: 'Permanent Marker', cursive;
+        position: absolute;
+        width: 200px;
+        height: 70px;
+        background-image: radial-gradient(circle, rgb(252, 252, 252), rgb(79, 76, 76));
+        border-radius: 20px;
+        padding: 15px;
+        left: -250px;
+        top: 100px;
+        transition: 0.5s;
+        display: none;
+    }
+
+    .header-text.active {
+        opacity: 1;
+        bottom: -50px;
+        left: 80px;
+        display: none;
+    }
+
+    .block {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        width: 90%;
+        height: 300px;
+        background-image: radial-gradient(circle, rgb(252, 252, 252), rgb(79, 76, 76));
+        margin: 0 auto;
+        margin-top: 250px;
+        border-radius: 20px;
+        padding: 20px;
+        position: relative;
+        overflow: hidden;
+    }
+
+    .photo-card {
+        position: absolute;
+        left: 250px;
+        top: 0;
+        width: 300px;
+        opacity: 30%;
+        z-index: 0;
+        transform: scale(0);
+        transition: 1.5s;
+        margin-top: -400px;
+        display: none;
+    }
+
+    .photo-card.new {
+        margin-top: 0px;
+        transform: scale(1);
+        opacity: 30%;
+        display: none;
+    }
+
+    .input0 {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin: 0 auto;
+        width: 90%;
+        height: 500px;
+        margin-top: 120px;
+        background-image: radial-gradient(circle, rgb(252, 252, 252), rgb(79, 76, 76));
+        border-radius: 20px;
+        padding: 20px;
+    }
+
+    .input-name {
+        font-family: 'Permanent Marker', cursive;
+        border-radius: 20px;
+        height: 25px;
+        background-image: radial-gradient(circle, rgb(252, 252, 252), rgb(79, 76, 76));
+        box-shadow: 2px 4px 5px #00000097;
+        z-index: 1;
+    }
+
+    .input-surname {
+        position: relative;
+        z-index: 1;
+        font-family: 'Permanent Marker', cursive;
+        border-radius: 20px;
+        height: 25px;
+        background-image: radial-gradient(circle, rgb(252, 252, 252), rgb(79, 76, 76));
+        box-shadow: 2px 4px 5px #00000097;
+        margin-bottom: 35px;
+    }
 
 
-
-
-
-
-
-
-
-
-
-@media (max-width: 1200px){
-
-}
-
-
-
-
-
-
-
-
-
-
-
-@media all and (min-width: 1201px){
 
 }
