--- a/index.css
+++ b/index.css
@@ -210,15 +210,14 @@ body {
     background-image: radial-gradient(circle, rgb(252, 252, 252), rgb(79, 76, 76));
     opacity: 0;
     transition: 0.5s;
-    right: -200px;
     border-radius: 20px;
     border: 4px solid gold;
     font-family: 'Playpen Sans', cursive;
+    margin-left: 225px;
 }
 
 .form-box1-modal.active {
     opacity: 1;
-    right: 20px;
 }
 
 
@@ -233,15 +232,14 @@ body {
     background-image: radial-gradient(circle, rgb(252, 252, 252), rgb(79, 76, 76));
     opacity: 0;
     transition: 0.5s;
-    right: -200px;
     border-radius: 20px;
     border: 4px solid gold;
     font-family: 'Playpen Sans', cursive;
+    margin-left: 225px;
 }
 
 .form-box2-modal.active {
     opacity: 1;
-    right: 20px;
 }
 
 
@@ -258,16 +256,15 @@ body {
     background-image: radial-gradient(circle, rgb(252, 252, 252), rgb(79, 76, 76));
     opacity: 0;
     transition: 0.5s;
-    right: -200px;
     border-radius: 20px;
     border: 4px solid gold;
     font-family: 'Playpen Sans', cursive;
     padding: 10px;
+    margin-left: 225px;
 }
 
 .form-box3-modal.active {
     opacity: 1;
-    right: 20px;
 }
 
 
@@ -285,15 +282,14 @@ body {
     background-image: radial-gradient(circle, rgb(252, 252, 252), rgb(79, 76, 76));
     opacity: 0;
     transition: 0.5s;
-    right: -200px;
     border-radius: 20px;
     border: 4px solid gold;
     font-family: 'Playpen Sans', cursive;
+    margin-left: 225px;
 }
 
 .form-box4-modal.active {
     opacity: 1;
-    right: 20px;
 }
 
 
@@ -309,13 +305,13 @@ body {
     background-image: radial-gradient(circle, rgb(252, 252, 252), rgb(79, 76, 76));
     opacity: 0;
     transition: 0.5s;
-    right: -200px;
     border-radius: 20px;
     border: 4px solid gold;
     font-family: 'Playpen Sans', cursive;
+    margin-top: 100px;
+    margin-left: 235px;
 }
 
 .form-box5-modal.active {
     opacity: 1;
-    right: 20px;
 }
