--- a/media.css
+++ b/media.css
@@ -192,9 +192,10 @@
         display: flex;
         flex-direction: row-reverse;
         align-items: center;
+        justify-content: space-around;
         /* flex-wrap: wrap; */
         width: 100%;
-        height: 100px;
+        height: 120px;
         background: #ffffff;
         margin: 0 auto;
         border-radius: 20px;
@@ -208,15 +209,13 @@
 
     .headerr {
         display: flex;
-        flex-direction: row;
-        margin-left: -400px;
+        flex-direction: column;
     }
 
     .headerr2 {
         display: flex;
         justify-content: center;
         flex-direction: column-reverse;
-        margin-left: 100px;
         padding: 10px;
     }
 
@@ -245,6 +244,7 @@
     .header-logo {
         font-family: 'Permanent Marker', cursive;
         color: gold;
+        display: none;
     }
 
     .header-name {
@@ -277,7 +277,7 @@
         display: flex;
         justify-content: center;
         flex-direction: column;
-        width: 90%;
+        width: 89%;
         height: 300px;
         background-image: radial-gradient(circle, rgb(252, 252, 252), rgb(79, 76, 76));
         margin: 0 auto;
@@ -313,7 +313,7 @@
         flex-direction: column;
         justify-content: center;
         margin: 0 auto;
-        width: 90%;
+        width: 89%;
         height: 500px;
         margin-top: 120px;
         background-image: radial-gradient(circle, rgb(252, 252, 252), rgb(79, 76, 76));
